<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mattress</string>
    <string name="forgetpassword">忘记密码</string>
    <string name="pleaseYourNumber">请输入手机号</string>
    <string name="pleaseYourVerificationCode">请输入验证码</string>
    <string name="getCode">获取验证码</string>
    <string name="next">下一步</string>
    <string name="pleaseYourPassword">请输入密码</string>
    <string name="pleaseYourPasswordNext">请输入确认密码</string>
    <string name="accomplish">完成</string>
    <string name="home">首页</string>
    <string name="Report">报告</string>
    <string name="mine">我的</string>
 <string name="mine_data">我的资料</string>
    <string name="touxiang">头像</string>
    <string name="yonghuming">用户名</string>
    <string name="shouji">手机</string>
    <string name="diqu">地区</string>
    <string name="baocun">保存</string>
    <string name="shezhi">设置</string>
    <string name="guanyuwomen">关于我们</string>
    <string name="banzhuzhongxin">帮助中心</string>
    <string name="qingchuhuancun">清除缓存</string>
    <string name="qiehuanyuyan">切换语言</string>
    <string name="baojinshezhi">报警设置</string>
    <string name="jibenxinxi">基本信息</string>
    <string name="banbenhao">版本号</string>
    <string name="tuichu">退出</string>
    <string name="zhongwen">中文</string>
    <string name="English">English</string>
    <string name="genggei">更改</string>
    <string name="gongsi">山东海天智能工程有限公司</string>
    <string name="suoxubangzhu">您所需要的帮助</string>
    <string name="zhanghaowenti">1.账号登录问题</string>
    <string name="zhuxiaowenti">2.注销账号问题</string>
    <string name="xinxiwenti">3.信息通知问题</string>
    <string name="xinlv">心率</string>
    <string name="xinlvxiaxian">心率下限</string>
    <string name="xinlvshangxian">心率上限</string>
    <string name="huxilv">呼吸率</string>
    <string name="huxianxiaxian">呼吸下限</string>
    <string name="huxishangxian">呼吸上限</string></resources>
