<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/title_back"
            android:layout_width="16dp"
            android:layout_height="18dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="@dimen/dp_10"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/banzhuzhongxin"
            android:textColor="@color/colorText"
            android:padding="@dimen/dp_12"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_width="16dp"
            android:layout_height="18dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="@dimen/dp_10"
            android:visibility="invisible"
            android:layout_marginRight="@dimen/dp_10"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suoxubangzhu"
        android:textColor="@color/colorText"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_20"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zhanghaowenti"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_10"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zhuxiaowenti"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_10"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xinxiwenti"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_10"
        />

</LinearLayout>