<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.ForgetPassword_next_Activity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_26"
        android:layout_marginTop="@dimen/dp_106"
        android:text="@string/forgetpassword"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_22" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_80"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/edit_bg">

        <EditText
            android:id="@+id/password_ed"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginLeft="@dimen/dp_12"
            android:background="@null"
            android:hint="@string/pleaseYourPassword"
            android:textSize="@dimen/sp_14" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/edit_bg">

        <EditText
            android:id="@+id/password_next_ed"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginLeft="@dimen/dp_12"
            android:background="@null"
            android:hint="@string/pleaseYourPasswordNext"
            android:textSize="@dimen/sp_14" />

    </RelativeLayout>


    <Button
        android:id="@+id/right_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_90"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/next_bg"
        android:text="@string/accomplish"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14" />

</LinearLayout>