<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.ForgetPassword_Activity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_26"
        android:layout_marginTop="@dimen/dp_106"
        android:text="@string/forgetpassword"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_22" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_80"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/edit_bg">

        <TextView
            android:id="@+id/add86_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_18"
            android:text="+86"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14" />

        <View
            android:id="@+id/view_id"
            android:layout_width="@dimen/dp_0_1"
            android:layout_height="@dimen/dp_25"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_toRightOf="@id/add86_id"
            android:background="@color/black"

            />

        <EditText
            android:id="@+id/mobile_ed"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_toRightOf="@id/view_id"
            android:background="@null"
            android:hint="@string/pleaseYourNumber"
            android:textSize="@dimen/sp_14" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/edit_bg">


        <EditText
            android:id="@+id/code_ed"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginLeft="@dimen/dp_12"
            android:background="@null"
            android:hint="@string/pleaseYourVerificationCode"
            android:textSize="@dimen/sp_14" />


        <TextView
            android:id="@+id/getcode_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_20"
            android:text="@string/getCode"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14" />

    </RelativeLayout>


    <Button
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_90"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/next_bg"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14" />

</LinearLayout>