<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/title_back"
            android:layout_width="16dp"
            android:layout_height="18dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="@dimen/dp_10"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mine_data"
            android:textColor="@color/colorText"
            android:padding="@dimen/dp_12"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_width="16dp"
            android:layout_height="18dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="@dimen/dp_10"
            android:visibility="invisible"
            android:layout_marginRight="@dimen/dp_10"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/guanyuwomen_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/guanyuwomen"
            android:textColor="@color/colorText"
            android:padding="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_16"
            />

        <ImageView
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_gravity="center"
            android:background="@drawable/ic_launcher_background"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:id="@+id/bangzhuzhongxin_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/banzhuzhongxin"
            android:textColor="@color/colorText"
            android:padding="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_16"
            />

        <ImageView
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_gravity="center"
            android:background="@drawable/ic_launcher_background"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:id="@+id/qingchuhuancun_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/qingchuhuancun"
            android:textColor="@color/colorText"
            android:padding="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_16"
            />

        <ImageView
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_gravity="center"
            android:background="@drawable/ic_launcher_background"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:id="@+id/qiehuanyuyan_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/qiehuanyuyan"
            android:textColor="@color/colorText"
            android:padding="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_16"
            />

        <ImageView
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_gravity="center"
            android:background="@drawable/ic_launcher_background"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:id="@+id/baojinshezhi_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/baojinshezhi"
            android:textColor="@color/colorText"
            android:padding="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_16"
            />

        <ImageView
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_gravity="center"
            android:background="@drawable/ic_launcher_background"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:id="@+id/banbenhao_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/banbenhao"
            android:textColor="@color/colorText"
            android:padding="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_16"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_gravity="center"
            android:text="V  1.0"
            android:textColor="@color/colorText"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <Button
        android:id="@+id/tuichu_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_22"
        android:layout_marginTop="@dimen/dp_200"
        android:layout_marginRight="@dimen/dp_21"
        android:background="@drawable/baocun_bg"
        android:text="@string/tuichu"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18" />

</LinearLayout>