<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/title_back"
            android:layout_width="16dp"
            android:layout_height="18dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="@dimen/dp_10"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mine_data"
            android:textColor="@color/colorText"
            android:padding="@dimen/dp_12"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_width="16dp"
            android:layout_height="18dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="@dimen/dp_10"
            android:visibility="invisible"
            android:layout_marginRight="@dimen/dp_10"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/touxiang_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/touxiang"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="@dimen/sp_16" />

        <ImageView
            android:id="@+id/touxiang_iv"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:padding="5dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginRight="@dimen/dp_2"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/yonghuming"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="right"
            android:hint="请输入姓名"
            android:maxLines="1"
            android:enabled="true"
            android:layout_marginRight="@dimen/dp_2"
            android:padding="10dp"
            android:textSize="@dimen/sp_16"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/shouji"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/shoujihao_ed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="null"
            android:textSize="@dimen/sp_16"
            android:layout_marginRight="@dimen/dp_12"
            android:hint="请输入手机号"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:id="@+id/address_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="地址"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/select_address_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"
            android:layout_marginRight="@dimen/dp_12"
            android:text="请选择地区" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_22"
        android:layout_marginTop="@dimen/dp_230"
        android:layout_marginRight="@dimen/dp_21"
        android:background="@drawable/baocun_bg"
        android:text="@string/baocun"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18" />

</LinearLayout>