<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/title_back"
            android:layout_width="16dp"
            android:layout_height="18dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="@dimen/dp_10"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qiehuanyuyan"
            android:textColor="@color/colorText"
            android:padding="@dimen/dp_12"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_width="16dp"
            android:layout_height="18dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="@dimen/dp_10"
            android:visibility="invisible"
            android:layout_marginRight="@dimen/dp_10"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/zhongwen_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zhongwen"
            android:textColor="@color/colorText"
            android:padding="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_16"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_gravity="center"
            android:checked="true"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />


    <LinearLayout
        android:id="@+id/guanyuwomen_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/English"
            android:textColor="@color/colorText"
            android:padding="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_16"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

</LinearLayout>